# Bricks

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
include/: AudioDevice.h  Ball.h  Brick.h  DifficultyParameter.h  DifficultyParameters.h  Game.h  GameObject.h  GameObjectPhysics.h  GameParameter.h  GetEvent.h  IndestructibleBrick.h  InputHandler.h  IsNumber.h  Level.h  MoveableGameObject.h  NearlyEqual.h  Platform.h  PlaySound.h  RGBColor.h  Renderer.h  SDL_RAII.h  TimeMeasure.h  Wall.h
include/game_objects/: Ball.h  Brick.h  GameObject.h  IndestructibleBrick.h  MoveableGameObject.h  Physics.h  PhysicsImproved.h  Platform.h  Wall.h
include/types/: Angle.h  Gravity.h  GridHeight.h  GridWidth.h  Height.h  Hitpoints.h  Length.h  MaxPositionX.h  MaxPositionY.h  Point.h  RGBColor.h  Velocity.h  Width.h
include/utility/: IsNumber.h  NearlyEqual.h  OperatorDegree.h  TimeMeasure.h
level/: 1.lvl  2.lvl  3.lvl  4.lvl  5.lvl
src/: Angle.cpp  Angle.h  AudioDevice.cpp  Ball.cpp  Ball.h  Brick.cpp  Brick.h  CMakeLists.txt  DifficultyParameter.cpp  DifficultyParameters.cpp  Game.cpp  GameObject.cpp  GameObject.h  GameObjectPhysics.cpp  GameObjectPhysics.h  GameParameter.cpp  GetEvent.cpp  IndestructibleBrick.cpp  IndestructibleBrick.h  InputHandler.cpp  IsNumber.cpp  IsNumber.h  Level.cpp  Level.h  MoveableGameObject.cpp  MoveableGameObject.h  NearlyEqual.cpp  NearlyEqual.h  OperatorDegree.h  Platform.cpp  Platform.h  PlaySound.cpp  Point.cpp  RGBColor.cpp  Renderer.cpp  Renderer.h  SDL_RAII.cpp  TimeMeasure.cpp  main.cpp  point.h
src/game_objects/: Ball.cpp  Brick.cpp  GameObject.cpp  MoveableGameObject.cpp  Physics.cpp  PhysicsImproved.cpp  Platform.cpp
src/types/: Angle.cpp  Angle.h  Gravity.cpp  Gravity.h  GridHeight.cpp  GridWidth.cpp  Height.cpp  Height.h  Hitpoints.cpp  Hitpoints.h  Length.cpp  Length.h  MaxPositionX.cpp  MaxPositionX.h  MaxPositionY.cpp  MaxPositionY.h  Point.cpp  Point.h  RGBColor.cpp  Velocity.cpp  Velocity.h  Width.cpp  Width.h
src/utility/: IsNumber.cpp  NearlyEqual.cpp  TimeMeasure.cpp
test/: Angle_test.cpp  Ball_test.cpp  Brick_test.cpp  GameObjectPhysics_test.cpp  GameObjectTest.cpp  GameObject_test.cpp  IsNumber_test.cpp  Level_test.cpp  MoveableGameObject_test.cpp  NearlyEqual_test.cpp  OperatorDegree_test.cpp  Platform_test.cpp  Point_test.cpp  RGBColor_test.cpp  test.cpp
test/game_objects/: Ball_test.cpp  Brick_test.cpp  GameObject_test.cpp  MoveableGameObject_test.cpp  PhysicsImproved_test.cpp  Physics_test.cpp  Platform_test.cpp
test/types/: Angle_test.cpp  Gravity_test.cpp  GridHeight_test.cpp  GridWidth_test.cpp  Height_test.cpp  Hitpoints_test.cpp  Length_test.cpp  MaxPositionX_test.cpp  MaxPositionY_test.cpp  Point_test.cpp  RGBColor_test.cpp  Velocity_test.cpp  Width_test.cpp
test/utility/: IsNumber_test.cpp  NearlyEqual_test.cpp  OperatorDegree_test.cpp
